fix wrong axis label :see_no_evil:

--- a/vignettes/ChromosomePlots.Rmd
+++ b/vignettes/ChromosomePlots.Rmd
@@ -963,15 +963,15 @@ ggplot(transcripts$Oki |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR
 
 p1 <- ggplot(as.data.frame(chrw$Oki) |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) ) + geom_boxplot(aes(x=paste0(seqnames, "_", Arm), y=transcripts.tx_len.median, fill=seqnames)) + ylab("median transcript length") + xlab(NULL) + theme(axis.text.x=element_text(angle=90)) + ggtitle("Okinawa: transcript length by chr and arm")
 
-p2 <- ggplot(as.data.frame(chrw$Oki) |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) ) + geom_boxplot(aes(x=paste0(seqnames, "_", Arm), y=operons.n.mean, fill=seqnames)) + ylab("median transcript length") + xlab(NULL) + theme(axis.text.x=element_text(angle=90)) + ggtitle("Okinawa: operon size by chr and arm")
+p2 <- ggplot(as.data.frame(chrw$Oki) |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) ) + geom_boxplot(aes(x=paste0(seqnames, "_", Arm), y=operons.n.mean, fill=seqnames)) + ylab("operon size") + xlab(NULL) + theme(axis.text.x=element_text(angle=90)) + ggtitle("Okinawa: operon size by chr and arm")
 
 p3 <- ggplot(as.data.frame(chrw$Osa) |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + geom_boxplot(aes(x=paste0(seqnames, "_", Arm), y=transcripts.tx_len.median, fill=seqnames)) + ylab("median transcript length") + xlab(NULL) + theme(axis.text.x=element_text(angle=90)) + ggtitle("Osa: transcript length by chr and arm")
 
-p4 <- ggplot(as.data.frame(chrw$Osa) |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + geom_boxplot(aes(x=paste0(seqnames, "_", Arm), y=operons.n.mean, fill=seqnames)) + ylab("median transcript length") + xlab(NULL) + theme(axis.text.x=element_text(angle=90)) + ggtitle("Osa: operon size by chr and arm")
+p4 <- ggplot(as.data.frame(chrw$Osa) |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + geom_boxplot(aes(x=paste0(seqnames, "_", Arm), y=operons.n.mean, fill=seqnames)) + ylab("operon size") + xlab(NULL) + theme(axis.text.x=element_text(angle=90)) + ggtitle("Osa: operon size by chr and arm")
 
 p5 <- ggplot(as.data.frame(chrw$Bar) |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + geom_boxplot(aes(x=paste0(seqnames, "_", Arm), y=transcripts.tx_len.median, fill=seqnames)) + ylab("median transcript length") + xlab(NULL) + theme(axis.text.x=element_text(angle=90)) + ggtitle("Bar: transcript length by chr and arm")
 
-p6 <- ggplot(as.data.frame(chrw$Bar) |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + geom_boxplot(aes(x=paste0(seqnames, "_", Arm), y=operons.n.mean, fill=seqnames)) + ylab("median transcript length") + xlab(NULL) + theme(axis.text.x=element_text(angle=90)) + ggtitle("Bar: operon size by chr and arm")
+p6 <- ggplot(as.data.frame(chrw$Bar) |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + geom_boxplot(aes(x=paste0(seqnames, "_", Arm), y=operons.n.mean, fill=seqnames)) + ylab("operon size") + xlab(NULL) + theme(axis.text.x=element_text(angle=90)) + ggtitle("Bar: operon size by chr and arm")
 
 layout <- "
 AA
