--- a/vignettes/ColinearityInterruptors.Rmd
+++ b/vignettes/ColinearityInterruptors.Rmd
@@ -26,7 +26,7 @@ suppressPackageStartupMessages({
   library('ggplot2')
   library("BreakpointsData")
 })
-genomes <- OikScrambling:::loadAllGenomes()
+genomes <- OikScrambling:::loadAllGenomes(compat = FALSE)
 load("BreakPoints.Rdata")
 reps <- OikScrambling:::loadAllRepeats()
 transcripts <- OikScrambling:::loadAllTranscriptsGR()
@@ -91,14 +91,14 @@ Is the alignment convincing ?
 
 ```{r pairwise_seq_alignments}
 # Good match where reported
-pairwiseAlignment(getSeq(genomes$Kum, GRanges("contig_3_1:16561-16812:-")), genomes$Oki$chr1[3870099:3870324], type="local")
+pairwiseAlignment(getSeq(genomes$KUM.M3.7f.M3.7f, GRanges("contig_3_1:16561-16812:-")), genomes$OKI2018.I692018.I69$chr1[3870099:3870324], type="local")
 
 # 50 bp of flanking regions added to contrast
-pairwiseAlignment(getSeq(genomes$Kum, GRanges("contig_3_1:16561-16812:-") + 50), genomes$Oki$chr1[(3870099 -50):(3870324 + 50)], type="global") |> writePairwiseAlignments()
+pairwiseAlignment(getSeq(genomes$KUM.M3.7f, GRanges("contig_3_1:16561-16812:-") + 50), genomes$OKI2018.I69$chr1[(3870099 -50):(3870324 + 50)], type="global") |> writePairwiseAlignments()
 
 # No good match between the flanking pairs.
-pairwiseAlignment(getSeq(genomes$Kum, GRanges("contig_3_1:16561-16812:+")), genomes$Oki$chr1[8086429:8104950], type="local")
-pairwiseAlignment(getSeq(genomes$Kum, GRanges("contig_3_1:16561-16812:-")), genomes$Oki$chr1[8086429:8104950], type="local")
+pairwiseAlignment(getSeq(genomes$KUM.M3.7f, GRanges("contig_3_1:16561-16812:+")), genomes$OKI2018.I69$chr1[8086429:8104950], type="local")
+pairwiseAlignment(getSeq(genomes$KUM.M3.7f, GRanges("contig_3_1:16561-16812:-")), genomes$OKI2018.I69$chr1[8086429:8104950], type="local")
 ```
 
 Yes, the alignment looks real!
@@ -129,7 +129,7 @@ Colinearity appears to be interrupted by many inversions and translocations.
 
 ```{r ROI3}
 gbs$Oki_Kum[1] |> as.data.frame()
-pairwiseAlignment(genomes$Kum$contig_10_1[52244:60120], genomes$Oki$chr1[7785:15657], type="global")
+pairwiseAlignment(genomes$KUM.M3.7f$contig_10_1[52244:60120], genomes$OKI2018.I69$chr1[7785:15657], type="global")
 subsetByOverlaps(reps$Oki, gbs$Oki_Kum[1])
 ```
 
@@ -269,24 +269,24 @@ ROI10_inv$query |> cleanGaps() |> as.character()
 Interestingly, this small inversion is flanked by an inverted repeat.
 
 ```{r ROI10_pairwise}
-pairwiseAlignment(getSeq(genomes$Oki, GRanges("PAR:80780-81022"        ) + 200 ),
-                  getSeq(genomes$Kum, GRanges("contig_57_1:58108-58350") + 200)) |> writePairwiseAlignments()
+pairwiseAlignment(getSeq(genomes$OKI2018.I69, GRanges("PAR:80780-81022"        ) + 200 ),
+                  getSeq(genomes$KUM.M3.7f, GRanges("contig_57_1:58108-58350") + 200)) |> writePairwiseAlignments()
 
-pairwiseAlignment(getSeq(genomes$Oki, GRanges("PAR:80780-81022")         + 200 ),
-                  getSeq(genomes$Kum, GRanges("contig_57_1:58108-58350") + 200) |> reverseComplement()) |> writePairwiseAlignments()
+pairwiseAlignment(getSeq(genomes$OKI2018.I69, GRanges("PAR:80780-81022")         + 200 ),
+                  getSeq(genomes$KUM.M3.7f, GRanges("contig_57_1:58108-58350") + 200) |> reverseComplement()) |> writePairwiseAlignments()
 
 # (Adjusted by hand)
-pairwiseAlignment(getSeq(genomes$Oki, GRanges("PAR:80523-80834")),
-                  getSeq(genomes$Oki, GRanges("PAR:80968-81279")) |> reverseComplement()) |> writePairwiseAlignments()
+pairwiseAlignment(getSeq(genomes$OKI2018.I69, GRanges("PAR:80523-80834")),
+                  getSeq(genomes$OKI2018.I69, GRanges("PAR:80968-81279")) |> reverseComplement()) |> writePairwiseAlignments()
 
-getSeq(genomes$Oki, GRanges("PAR:80523-80834")) |> as.character()
+getSeq(genomes$OKI2018.I69, GRanges("PAR:80523-80834")) |> as.character()
 ```
 
 This sequence matches `MITE_oki2018_i69_4_20065_S1_MITE#DNA/MITE` in Sasha's
 repeat annotation.
 
 ```{r search_MITE}
-vmatchPattern(genomes$Oki$PAR[80523:80834], genomes$Oki, with.indels = TRUE, max.mismatch = 20) |> sort(ignore.strand = TRUE) |> as.data.frame()
+vmatchPattern(genomes$OKI2018.I69$PAR[80523:80834], genomes$OKI2018.I69, with.indels = TRUE, max.mismatch = 20) |> sort(ignore.strand = TRUE) |> as.data.frame()
 ```
 
 ## Other interesting things in the area
@@ -306,21 +306,21 @@ tail(ROI10_ins, 2) |> plotApairOfChrs(main = "An insertion in the Kume genome")
 tail(ROI10_ins, 2) |> swap() |> cleanGaps()
 
 # Left side
-pairwiseAlignment(getSeq(genomes$Oki, GRanges("PAR:83350-83550")),
-                  getSeq(genomes$Kum, GRanges("contig_57_1:55548-55748")) |> reverseComplement(),
+pairwiseAlignment(getSeq(genomes$OKI2018.I69, GRanges("PAR:83350-83550")),
+                  getSeq(genomes$KUM.M3.7f, GRanges("contig_57_1:55548-55748")) |> reverseComplement(),
                   type = "global") |> writePairwiseAlignments()
 
 # Right side
-pairwiseAlignment(getSeq(genomes$Oki, GRanges("PAR:83351-83551")),
-                  getSeq(genomes$Kum, GRanges("contig_57_1:55236-55436")) |> reverseComplement(),
+pairwiseAlignment(getSeq(genomes$OKI2018.I69, GRanges("PAR:83351-83551")),
+                  getSeq(genomes$KUM.M3.7f, GRanges("contig_57_1:55236-55436")) |> reverseComplement(),
                   type = "global") |> writePairwiseAlignments()
 
 # Both sides
-pairwiseAlignment(getSeq(genomes$Oki, GRanges("PAR:83350-83551")),
-                  getSeq(genomes$Kum, GRanges("contig_57_1:55236-55748")) |> reverseComplement(),
+pairwiseAlignment(getSeq(genomes$OKI2018.I69, GRanges("PAR:83350-83551")),
+                  getSeq(genomes$KUM.M3.7f, GRanges("contig_57_1:55236-55748")) |> reverseComplement(),
                   type = "global") |> writePairwiseAlignments()
 
-getSeq(genomes$Kum, GRanges("contig_57_1:55337-55647:+")) |> as.character()
+getSeq(genomes$KUM.M3.7f, GRanges("contig_57_1:55337-55647:+")) |> as.character()
 ```
 
 Exemplar from the Okinawa genome (found by BLASTing the sequence output by
